# manganis-experiment

./: Cargo.toml  README.md
slave/: Cargo.toml
slave/src/: main.rs
src/: main.rs
