[package]
name = "manganis-linkme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["slave"]

[dependencies]
linkme = "0.3.25"
memmap2 = "0.9.4"
object = {version="0.33.0", features=["wasm"]}
serde = "1.0.197"
